First layout change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(ottobot_pkg)
+project(ottobot)
 
 ## Compile as C++14
 add_compile_options(-std=c++17)
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 # find_package(Boost REQUIRED COMPONENTS system)
 find_package(Eigen3 REQUIRED)
@@ -24,31 +25,37 @@ if(OpenMP_FOUND)
 endif(OpenMP_FOUND)
 
 # Enable CUDA
-find_package(CUDA)
-if(CUDA_FOUND)
-  enable_language(CUDA)
+option(USE_GPU "Option to build for GPU support" OFF)
+if (USE_GPU)
+  message(STATUS "USE_GPU set to true")
+  find_package(CUDA)
+  if(CUDA_FOUND)
+    enable_language(CUDA)
 
-  if(CMAKE_CUDA_COMPILER)
-    set(CMAKE_CUDA_FLAGS "-arch=sm_53")
-    set(CUDA_VERBOSE_BUILD on )
-  endif(CMAKE_CUDA_COMPILER)
+    if(CMAKE_CUDA_COMPILER)
+      set(CMAKE_CUDA_FLAGS "-arch=sm_53")
+      set(CUDA_VERBOSE_BUILD on )
+    endif(CMAKE_CUDA_COMPILER)
 
-else()
-  message(WARNING "Could not find CUDA")
+  else()
+    message(WARNING "Could not find CUDA")
 
-endif()
+  endif(CUDA_FOUND)
+endif(USE_GPU)
 
 # Ottobot Library
-file(GLOB_RECURSE OTTO_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
+file(GLOB_RECURSE OTTO_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto/*.cpp")
 
 if(CMAKE_CUDA_COMPILER)
-  file(GLOB_RECURSE OTTO_GPU_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/*.cu")
+  file(GLOB_RECURSE OTTO_GPU_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto/*.cu")
   set(OTTO_SRC_FILES ${OTTO_SRC_FILES} ${OTTO_GPU_SRC_FILES})
 endif(CMAKE_CUDA_COMPILER)
 
-set(OTTO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include/)
+set(OTTO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include/otto)
 
-add_library(otto ${OTTO_SRC_FILES})
+add_library(otto SHARED
+  ${OTTO_SRC_FILES}
+)
 
 target_include_directories( otto PUBLIC 
   ${OTTO_INCLUDE_DIR}
@@ -63,24 +70,39 @@ endif(CMAKE_CUDA_COMPILER)
 
 target_link_libraries(otto ${OpenCV_LIBRARIES})
 
-# Testing
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+# Python bindings
+file(GLOB_RECURSE OTTOPY_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto_python/*.cpp")
+
+add_library(ottopy SHARED
+  ${OTTOPY_SRC_FILES}
 )
-FetchContent_MakeAvailable(googletest)
 
-enable_testing()
-file(GLOB_RECURSE OTTO_TESTS_FILES "${CMAKE_CURRENT_LIST_DIR}/tests/*.cpp")
-
-add_executable(otto_tests ${OTTO_TESTS_FILES})
-
-target_link_libraries(
-  otto_tests
-  GTest::gtest_main
+target_link_libraries(ottopy
   otto
 )
 
-include(GoogleTest)
-gtest_discover_tests(otto_tests)
+# Testing
+option(BUILD_TESTS "Option for building tests" OFF)
+if (BUILD_TESTS)
+  message(STATUS "Tests set to True")
+  include(FetchContent)
+  FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+  )
+  FetchContent_MakeAvailable(googletest)
+
+  enable_testing()
+  file(GLOB_RECURSE OTTO_TESTS_FILES "${CMAKE_CURRENT_LIST_DIR}/tests/otto/*.cpp")
+
+  add_executable(otto_tests ${OTTO_TESTS_FILES})
+
+  target_link_libraries(
+    otto_tests
+    GTest::gtest_main
+    otto
+  )
+
+  include(GoogleTest)
+  gtest_discover_tests(otto_tests)
+endif(BUILD_TESTS)
