--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(ottobot)
+project(vo)
 
 ## Compile as C++14
 add_compile_options(-std=c++17)
@@ -8,10 +8,12 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 # find_package(Boost REQUIRED COMPONENTS system)
 find_package(Eigen3 REQUIRED)
 
-# Find PCL library
-# find_package(PCL REQUIRED COMPONENTS common io)
-# link_directories(${PCL_LIBRARY_DIRS})
-# add_definitions(${PCL_DEFINITIONS})
+# Find YAML
+find_package(yaml-cpp REQUIRED)
+
+# Find Sophus
+find_package(Sophus REQUIRED)
+include_directories(ThirdParty/Sophus)
 
 # Find OpenCV
 find_package(OpenCV 4 REQUIRED)
@@ -43,66 +45,89 @@ if (USE_GPU)
   endif(CUDA_FOUND)
 endif(USE_GPU)
 
-# Ottobot Library
-file(GLOB_RECURSE OTTO_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto/*.cpp")
+# VO Library
+file(GLOB_RECURSE VO_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/visual-odometry/*.cpp")
 
 if(CMAKE_CUDA_COMPILER)
-  file(GLOB_RECURSE OTTO_GPU_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto/*.cu")
-  set(OTTO_SRC_FILES ${OTTO_SRC_FILES} ${OTTO_GPU_SRC_FILES})
+  file(GLOB_RECURSE VO_GPU_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/visual-odometry/*.cu")
+  set(VO_SRC_FILES ${VO_SRC_FILES} ${VO_GPU_SRC_FILES})
 endif(CMAKE_CUDA_COMPILER)
 
-set(OTTO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include/otto)
+set(VO_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include/visual-odometry)
 
-add_library(otto SHARED
-  ${OTTO_SRC_FILES}
+add_library(vo SHARED
+  ${VO_SRC_FILES}
 )
 
-target_include_directories( otto PUBLIC 
-  ${OTTO_INCLUDE_DIR}
-  ${EIGEN3_INCLUDE_DIR}
+target_include_directories( vo PUBLIC 
+  ${VO_INCLUDE_DIR}
+  ${EIGEN3_INCLUDE_DIRS}
   ${manif_INCLUDE_DIRS}
+  ${YAML_CPP_INCLUDE_DIRS}
 )
 
 if(CMAKE_CUDA_COMPILER)
-  set_target_properties(otto PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-  set_target_properties(otto PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+  set_target_properties(vo PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+  set_target_properties(vo PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 endif(CMAKE_CUDA_COMPILER)
 
-target_link_libraries(otto ${OpenCV_LIBRARIES})
+target_link_libraries(
+  vo
+  PUBLIC
+    ${OpenCV_LIBRARIES}
+    Sophus::Sophus
+    ${YAML_CPP_LIBRARIES}
+)
 
 # Python bindings
-file(GLOB_RECURSE OTTOPY_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/otto_python/*.cpp")
+find_package(pybind11 CONFIG REQUIRED)
 
-add_library(ottopy SHARED
-  ${OTTOPY_SRC_FILES}
-)
+execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import numpy; print(numpy.get_include())" OUTPUT_VARIABLE NUMPY_INCLUDE OUTPUT_STRIP_TRAILING_WHITESPACE)
+message(STATUS "NUMPY_INCLUDE: " ${NUMPY_INCLUDE})
+include_directories(${NUMPY_INCLUDE})
 
-target_link_libraries(ottopy
-  otto
+file(GLOB_RECURSE PYVO_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/python-bindings/*.cpp")
+pybind11_add_module(pyvo MODULE ${PYVO_SRC_FILES})
+
+target_link_libraries(pyvo PRIVATE
+  vo
+  ${OpenCV_LIBRARIES}
 )
+# target_compile_definitions(pyvo PRIVATE
+#   "ndarray_converter.h"
+# )
+# install(TARGETS _pyvo DESTINATION pyvo)
+
+# add_library(pyvo SHARED
+#   ${VO_SRC_FILES}
+# )
+
+# target_link_libraries(pyvo
+#   vo
+# )
 
 # Testing
-option(BUILD_TESTS "Option for building tests" OFF)
-if (BUILD_TESTS)
-  message(STATUS "Tests set to True")
-  include(FetchContent)
-  FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-  )
-  FetchContent_MakeAvailable(googletest)
+# option(BUILD_TESTS "Option for building tests" OFF)
+# if (BUILD_TESTS)
+#   message(STATUS "Tests set to True")
+#   include(FetchContent)
+#   FetchContent_Declare(
+#     googletest
+#     URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+#   )
+#   FetchContent_MakeAvailable(googletest)
 
-  enable_testing()
-  file(GLOB_RECURSE OTTO_TESTS_FILES "${CMAKE_CURRENT_LIST_DIR}/tests/otto/*.cpp")
+#   enable_testing()
+#   file(GLOB_RECURSE VO_TESTS_FILES "${CMAKE_CURRENT_LIST_DIR}/tests/vo/*.cpp")
 
-  add_executable(otto_tests ${OTTO_TESTS_FILES})
+#   add_executable(vo_tests ${VO_TESTS_FILES})
 
-  target_link_libraries(
-    otto_tests
-    GTest::gtest_main
-    otto
-  )
+#   target_link_libraries(
+#     vo_tests
+#     GTest::gtest_main
+#     vo
+#   )
 
-  include(GoogleTest)
-  gtest_discover_tests(otto_tests)
-endif(BUILD_TESTS)
+#   include(GoogleTest)
+#   gtest_discover_tests(vo_tests)
+# endif(BUILD_TESTS)
